# alx-backend-caching_property_listings

./: .gitignore  docker-compose.yml  manage.py  pyproject.toml
alx-backend-caching_property_listings/: asgi.py  settings.py  urls.py  wsgi.py
alx_backend_caching_property_listing/: settings.py  urls.py
alx_backend_caching_property_listings/: settings.py  urls.py  wsgi.py
properties/: apps.py  signals.py  utils.py  views.py
properties/migrations/: 0001_initial.py
